# fpga-spc700

./: .gitignore  CMakeLists.txt  Makefile  README.md  driver.py  dsp_prototype.py  dsp_schedule.txt  uart_commands.md
.github/workflows/: report-to-discord.yml
cyclone-v-gx/: Chain5.cdf  blockram.qip  blockram.v  button.v  devboard.qsf  devboard.sdc  devboard.v  devboard.v.bak  devboard_assignment_defaults.qdf  hexdisplay.v  i2c.v  i2s.v  i2s.v.bak  lab1.qpf  main_clk_gen.bsf  main_clk_gen.cmp  main_clk_gen.ppf  main_clk_gen.qip  main_clk_gen.sip  main_clk_gen.spd  main_clk_gen.v  main_clk_gen_sim.f  sin_data.mif  ssm2603_bringup.v  ssm2603_codec.v  ssm2603_codec.v.bak  stp1.stp  uart_clk_gen.bsf  uart_clk_gen.cmp  uart_clk_gen.ppf  uart_clk_gen.qip  uart_clk_gen.sip  uart_clk_gen.spd  uart_clk_gen.v  uart_clk_gen_sim.f
cyclone-v-gx/main_clk_gen/: main_clk_gen_0002.qip  main_clk_gen_0002.v
cyclone-v-gx/main_clk_gen_sim/: main_clk_gen.vo
cyclone-v-gx/uart_clk_gen/: uart_clk_gen_0002.qip  uart_clk_gen_0002.v
cyclone-v-gx/uart_clk_gen_sim/: uart_clk_gen.vo
gui/: audio_queue.h  controller.cpp  controller.h  dsp_registers.h  gen_dsp_register_data.py  gui.cpp  im_file_picker.h  verilator_controller.cpp  verilator_controller.h
src/: ADPCM.v  Assembler.h  BRRDecoder.v  BasicBench.h  CPU.v  CPU.v.old  CPUBench.cpp  CPUBench.v  DSP.v  DSPVoice.v  DSPVoiceDecoder.cpp  DSPVoiceDecoder.v  DSPold.txt  ECP5_CPUBench.v  Ice40_CPUBench.v  SPC700RAM.v  SampleQueue.v  SimulatorTop.v  TestDSP.cpp  TestDSP.v  TestRAM.v  ecp5.lpf  gen_timing.py  ice40.pcf  simulator.cpp  types.h  uart_processor.v  uart_rx.v  uart_tx.cpp  uart_tx.v  wave.h
test_data/: 01_gun_shot_1.brr  02_conga_1.brr  13_piano.brr  15_pizzicato_string.brr  chrono-trigger-wind-scene.spc  hk97.hex  hk97_00.brr
test_data/bahamut_lagoon/: 05_unknown-glitch_5.brr  08_unknown-glitch_8.brr  11_accordion.brr  12_synth_organ.brr  13_flute_1.brr  14_wind_flute.brr  15_english_horn.brr  16_bubbling_water.brr  17_strings.brr  1C_tam.brr  (+32 more)
(+118 files in other folders)
